# sglang-diffusion-routing

./: LICENSE  README.md  development.md  diff.txt  pyproject.toml
examples/: fake_worker_app.py  local_launcher.yaml
examples/diffusion_router/: bench_router.py  bench_routing_algorithms.py  demo.py
src/sglang_d_router/: cli.py
src/sglang_d_router/router/: diffusion_router.py
src/sglang_diffusion_routing/cli/: main.py
src/sglang_diffusion_routing/launcher/: __init__.py  backend.py  config.py  local.py  utils.py
src/sglang_diffusion_routing/router/: diffusion_router.py
tests/e2e/: fake_worker.py  test_e2e_real.py  test_e2e_sglang.py
tests/unit/: test_cli.py  test_diffusion_router.py  test_launcher.py  test_router_endpoints.py
